[project]
name = "zgrbid-api"
version = "0.1.0"
description = "RFQ/SOW Analysis and Proposal Generation API"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "rq>=1.15.0",
  "python-docx>=1.1.0",
  "jinja2>=3.1.0",
  "pdfplumber>=0.10.0",
  "pypdf>=4.0.0",
  "camelot-py[cv]>=0.11.0",
  "openpyxl>=3.1.0",
  "python-multipart>=0.0.6",
  "sentence-transformers>=2.2.0",
  "faiss-cpu>=1.7.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.25.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "amadeus>=8.0.0",
  "pyautogen>=0.2.0",
  "autogen>=0.10.0",
  "json-repair>=0.7.0",
  "openai>=2.8.0",
  "reportlab>=4.0.0",
  "weasyprint>=60.0",
  "markdown>=3.5.0",
  "tabulate>=0.9.0",
  "pymupdf>=1.23.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.16.0",
  "pillow>=10.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
